2015-01-29  Andreas Schwab  <schwab@suse.de>

	* sysdeps/nptl/allocrtsig.c: Include <signal.h>.

2015-01-29  Siddhesh Poyarekar <siddhesh@redhat.com>

	[BZ #17892]
	* nscd/nscd_stat.c (send_stats): Initialize DATA.

2015-01-28  Martin Sebor  <msebor@redhat.com>

	* math/README.libm-test: Clarify. Add "How to read the test output."

2015-01-28  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/tile/tilegx/bits/atomic.h [!_LP64] (__HAVE_64B_ATOMICS):
	Define to 0.

2015-01-28  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/mips/bits/atomic.h [_MIPS_SIM == _ABIN32]
	(__HAVE_64B_ATOMICS): Define to 0.

2015-01-28  Adhemerval Zanellla  <azanella@linux.vnet.ibm.com>

	[BZ #17885]
	* sysdeps/powerpc/fpu/fsetexcptflg.c (__fesetexceptflag): Fix correct
	value to set as new flag.

	[BZ #16576]
	* sysdeps/powerpc/fpu/math_private.h [__CPU_HAS_FSQRT]: Remove define
	and use _ARCH_PPCSQ instead.
	(__ieee754_sqrt): Likewise.
	(__ieee754_sqrtf): Likewise.
	* sysdeps/powerpc/fpu/e_sqrt.c (__slow_ieee754_sqrt): Build only if
	_ARCH_PPCSQ is defined.
	(__ieee754_sqrt): Use _ARCH_PPCSQ to select wheter to use hardware
	fsqrt instruction.
	* sysdeps/powerpc/fpu/e_sqrtf.c (__ieee754_sqrtf): Build only if
	_ARCH_PPCSQ is defined.
	(__ieee754_sqrtf): Use _ARCH_PPCSQ to select wheter to use hardware
	fsqrts instruction.
	* sysdeps/powerpc/powerpc64/fpu/e_sqrt.c: Remove file.

2015-01-27  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* iconv/loop.c: Suppress array out of bound warning caused by GCC
	bug (GCC BZ #64739).

2015-01-25  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/unix/sysv/linux/ia64/lowlevellock.h (lll_futex_requeue):
	Mark _retval as used.
	(lll_futex_wake_unlock): Likewise.
	(lll_futex_timed_wait_requeue_pi): Likewise.

	* sysdeps/unix/sysv/linux/m68k/coldfire/bits/atomic.h
	(atomic_compare_and_exchange_val_acq): Use uint32_t for the
	register variables.

	* sysdeps/m68k/m680x0/fpu/fraiseexcpt.c (__feraiseexcept): Use
	libm_hidden_def.
